--- a/styles.css
+++ b/styles.css
@@ -351,6 +351,13 @@ article h2.post-title {
   margin: 2rem 0;
 }
 
+mjx-container {
+  display: block;
+  overflow-x: auto;
+  overflow-y: hidden;
+  max-width: 100%;
+}
+
 /* Mobile */
 @media (max-width: 768px) {
   aside {
